se corrigieron detalles de diseño

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="¿Querés saber que energías hay dentro tuyo? .Te invito a reconectarte con vos y con el mundo a traves de la maravillosa herramienta que es la Astrología.">
-    <meta name="keywords" content=" ASTROLOGÍA, SERVICIOS ASTROLÓGICOS, CARTA NATAL, CURSOS DE ASTROLOGIA, TALLERES DE ASTROLOGIA, VIDEOS DE ASTROLOGIA, INFORMACIÓN DE ASTROLOGÍA, INFORME ESCRITO DE CARTA NATAL, INFORME ONLINE DE CARTA NATAL, LECTURAS DE CARTA NATAL, TALLER DE LA LUNA ASTROLOGÍA, APRENDER ASTROLOGÍA"  >
+    <meta name="description" content="Descubre las energías que hay en ti a través de la astrología. Lecturas de carta y cursos en vivo. Conéctate contigo y con el mundo.">
+    <meta name="keywords" content=" ASTROLOGÍA, SERVICIOS ASTROLÓGICOS, CARTA NATAL, CURSOS DE ASTROLOGIA, TALLERES DE ASTROLOGIA, VIDEOS DE ASTROLOGIA, INFORMACIÓN DE ASTROLOGÍA, INFORME ESCRITO DE CARTA NATAL, INFORME ONLINE DE CARTA NATAL, LECTURAS DE CARTA NATAL, TALLER DE LA LUNA ASTROLOGÍA, APRENDER ASTROLOGÍA, HOROSCOPO, ZODIACO, SIGNOS"  >
 
     <!-- link de font-->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital@1&display=swap" rel="stylesheet">
@@ -24,14 +24,14 @@
   <!-- boton wpp-->
   <div class="boton-wpp">
     <a href="https://api.whatsapp.com/send?phone=542915660864" class="whatsapp" target="_blank">
-      <img src="img/logoastrox.png" alt="logo astro x "> 
+      <img src="../img/wpp.png"  alt="whatsapp espacio astro x"> 
     </a>
     <p class="hablemos"> ¡Hablemos!</p>
   </div>
   <!-- boton arriba-->
   <div class="boton-arriba">
     <a href="#header" class="imagen-arriba">
-      <img src="img/arrow.svg" alt="boton arriba"> 
+      <img src="img/up.png" alt="boton arriba"> 
     </a>
   </div>
 <!-- Aca esta el menu de bs-->
@@ -182,7 +182,7 @@
   <div class="footer-contenedor">
     <p>¡Te invitamos a seguirnos en nuestras redes sociales!</p>
     <div class="imagenes-footer">
-      <a href="https://www.instagram.com/astro.equis" target="blank" class="instagram">
+      <a href="https://www.instagram.com/espacioastrox" target="blank" class="instagram">
         <img src="img/instalogo.png" alt="instagram logo">
       </a>
       <a href="https://www.facebook.com" target="blank" class="facebook">
