--- a/paginas/astro101.html
+++ b/paginas/astro101.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Te contamos todo lo que necesitás saber sobre el mundo de Astrología, con nuestros artículos dedicados para que sigas aprendiendo.">
-    <meta name="keywords" content="APRENDER ASTROLOGIA, INFORMACION DE PLUTON, PLUTON EN ASTROLOGIA, INFORMACION DE JUPITER, JUPITER EN ASTROLOGIA, INFORMACION DE LA LUNA EN ASTROLOGIA, LA LUNA EN ASTROLOGIA,
-    ASTRO DATA "  >
+    <meta name="description" content="Lee nuestros artículos sobre astrología y descubre cómo los astros influyen en tu vida y relaciones. Aprende más sobre tu carta natal y pronósticos astrológicos.">
+    <meta name="keywords" content="astrología, horóscopo, zodiaco, signos zodiacales, cartas astrales, interpretación, lectura astrológica, astrología evolutiva, astrología psicológica, predicciones, compatibilidad, tránsitos planetarios, ascendentes, lunas, planetas en astrología."  >
     <!-- link de font-->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
     <!-- otro link de font-->
@@ -27,17 +26,17 @@
       <script>
           AOS.init();
       </script>
-    <video src="../img/video-fondo.mp4" autoplay loop muted></video>
+    <video src="../img/video-fondo.mp4" autoplay loop muted alt="espacio""></video>
     <div class="boton-wpp">
       <a href="https://api.whatsapp.com/send?phone=542915660864" class="whatsapp" target="_blank">
-        <img src="../img/logoastrox.png" alt="logo astro x "> 
+        <img src="../img/wpp.png" alt="logo espacio astro x "> 
       </a>
       <p class="hablemos"> ¡Hablemos!</p>
     </div>
     <!-- boton arriba-->
   <div class="boton-arriba">
     <a href="#header-5" class="imagen-arriba">
-      <img src="../img/arrow.svg" alt="boton arriba"> 
+      <img src="../img/up.png" alt="boton arriba"> 
     </a>
   </div>
     <!-- Header..........-->
@@ -115,7 +114,7 @@
       <div class="footer-mobile">
         <p>¡Te invitamos a seguirnos en nuestras redes sociales!</p>
         <div class="imagenes-footer">
-          <a href="https://www.instagram.com/astro.equis" target="blank" class="instagram">
+          <a href="https://www.instagram.com/espacioastrox" target="blank" class="instagram">
             <img src="../img/instalogo.png" alt="instagram logo">
           </a>
           <a href="https://www.facebook.com" target="blank" class="facebook">
