--- a/paginas/blog.html
+++ b/paginas/blog.html
@@ -58,7 +58,7 @@
         <div class="footer-contenedor">
           <p>¡Te invitamos a seguirnos en nuestras redes sociales!</p>
           <div class="imagenes-footer">
-            <a href="https://www.instagram.com/astro.equis" target="blank" class="instagram">
+            <a href="https://www.instagram.com/espacioastrox" target="blank" class="instagram">
               <img src="../img/instalogo.png" alt="instagram logo">
             </a>
             <a href="https://www.facebook.com" target="blank" class="facebook">
