--- a/paginas/cartanatal.html
+++ b/paginas/cartanatal.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="¿Querés saber que energías hay dentro tuyo?. Con nuestros informes online y escritos, te contamos como es tu carta, que energías te operan y como aprovecharlas.">
-    <meta name="keywords" content="LECTURA DE CARTA NATAL, LECTURA DE CARTA NATAL MAS REVOLUCION SOLAR, LECTURA DE CARTA NATAL ONLINE, LECTURA DE CARTA NATAL ESCRITA, CONOCE TU CARTA ASTRAL, DESCUBRI TU CARTA ASTRAL, CONOCE TU CARTA NATAL, INFORMACION DE TU CARTA NATAL Y ASTRAL, SERVICIOS DE ASTROLOGIA"  >
+    <meta name="description" content="Descubre tu interior y tu futuro. Ofrecemos lecturas en línea, revolución solar,informes escritos y mucho más. ¡Explora tu potencial con la astrología!">
+    <meta name="keywords" content="Lectura de Carta Natal, Revolución Solar, Astrología, Informe Escrito, Interpretación de Carta Astral, Carta astral, horóscopo, astrología online, interpretación de cartas natales, astrología personalizada, análisis astrológico, tránsitos planetarios, predicciones astrológicas, signos astrológicos, casas astrológicas"  >
     <!-- link de font-->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
     <!-- otro link de font-->
@@ -23,14 +23,14 @@
     <video src="../img/video-fondo.mp4" autoplay loop muted></video>
     <div class="boton-wpp">
       <a href="https://api.whatsapp.com/send?phone=542915660864" class="whatsapp" target="_blank">
-        <img src="../img/logoastrox.png" alt="logo astro x "> 
+        <img src="../img/wpp.png" alt="logo astro x "> 
       </a>
       <p class="hablemos"> ¡Hablemos!</p>
 </div>
 <!-- boton arriba-->
 <div class="boton-arriba">
   <a href="#header-3" class="imagen-arriba">
-    <img src="../img/arrow.svg" alt="boton arriba"> 
+    <img src="../img/up.png" alt="boton arriba"> 
   </a>
 </div>
 <!--------------- header---------------->
@@ -74,7 +74,7 @@
     <div id="informe-online-id" class="carta-online">
       <!-- Principio del widget de enlace de Calendly -->
       <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
-      <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+      <script src="https://assets.calendly.com/assets/external/widget.js"src="https://assets.calendly.com/assets/external/widget.js"  type="text/javascript" async></script>
         <h2 class="h2-carta-online"><a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/astrox/lectura'});return false;">CARTA NATAL (ONLINE) -CLICK </a></h2>
         <!-- Final del widget de enlace de Calendly -->
         <p class="texto-carta-online"> Sesión de 2hs en la que te vas a llevar una pdoerosa herramienta de autoconocimiento, que te va a servir para toda tu vida. Vamos a realizar la lectura en videollamada y vamos a charlar sobre las energías presentes en tu carta (Sol, Luna, Ascendente, etc). Luego te llevas un breve informe escrito para que puedas utilizarlo como guía.</p>
@@ -83,7 +83,7 @@
     <div class="carta-revo">
       <!-- Principio del widget de enlace de Calendly -->
       <link href="https://assets.calendly.com/assets/external/widget.css"      rel="stylesheet">
-      <script src="https://assets.calendly.com/assets/external/widget.js" type="text/     javascript" async></script>
+      <script src="https://assets.calendly.com/assets/external/widget.js"  type="text/     javascript" async></script>
       <h2 class="h2-carta-online"><a href="" onclick="Calendly.initPopupWidget     ({url: 'https://calendly.com/astrox/lectura'});return false;">CARTA NATAL + REVOLUCION SOLAR  (ONLINE) -CLICK</a></h2>
       <!-- Final del widget de enlace de Calendly -->
      <p class="texto-carta-revo"> A la sesión de carta natal le sumamos la lectura de Revolución Solar, que nos muestra las energías que te van a acompañar durante todo el año (Tomando como referencia el dia de tu cumpleaños, para ver la posición de los planetas).Es una excelente herramienta para saber con que energías podemos contar y trabajar en ese año específico.</p>
@@ -122,7 +122,7 @@
         <div class="footer-mobile">
           <p>¡Te invitamos a seguirnos en nuestras redes sociales!</p>
           <div class="imagenes-footer">
-            <a href="https://www.instagram.com/astro.equis" target="blank" class="instagram">
+            <a href="https://www.instagram.com/espacioastrox" target="blank" class="instagram">
               <img src="../img/instalogo.png" alt="instagram logo">
             </a>
             <a href="https://www.facebook.com" target="blank" class="facebook">
