--- a/paginas/pluton.html
+++ b/paginas/pluton.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Plutón, el planeta de la transformación explicado a fondo.">
-    <meta name="keywords" content="PLUTON EN LA MITOLOGIA, PLUTON EN ASTROLOGIA, INFO DE PLUTON, PLUTON Y LA TRANSFORMACION, SER PLUTONIANO, PLUTON COMO PLANETA DOMINANTE, PLUTON ES ESCORPIO, PLUTON Y LAS GENERACIONES, PLUTON Y EL CONTROL,PLUTON EN LA CARTA NATAL, PLUTON Y EL TABU, PLUTON POLARIZADO, HADES, MITOLOGIA DE HADES, MITOLOGIA Y ASTROLOGIA, PLUTON POR CASA, ASPECTOS DE PLUTON, PLUTON ASPECTO AL SOL, PLUTON ASPECTO A LA LUNA, PLUTON ASPECTO A MARTE, PLUTON ASPECTO A MERCURIO, PLUTON ASPECTO A VENUS, PLUTON ASPECTO A JUPITER, PLUTON EN CASA 1, PLUTON EN CASA 2, PLUTON EN CASA 3, PLUTON EN CASA 4, PLUTON EN CASA 5, PLUTON EN CASA 6, PLUTON EN CASA 7, PLUTON EN CASA 8, PLUTON EN CASA9, PLUTON EN CASA 9, PLUTON EN CASA 10, PLUTON EN CASA 11, PLUTON EN CASA 12 "  >
+    <meta name="description" content="Explora el impacto de Plutón en tus relaciones con nuestra guía astrológica. Descubre cómo este planeta puede influir en tu vida amorosa y en tus interacciones personales">
+    <meta name="keywords" content="astrología, plutón, relaciones, transformación, poder, intimidad, control, misterio, seducción, cambios, pasión, influencia, sexualidad, psique, magnetismo, casa 8, obsesion, intensidad"  >
     <!-- link de font-->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
     <!-- otro link de font-->
@@ -326,7 +326,7 @@
   <div class="footer-mobile">
    <p>¡Te invitamos a seguirnos en nuestras redes sociales!</p>
    <div class="imagenes-footer">
-     <a href="https://www.instagram.com/astro.equis" target="blank" class="instagram">
+     <a href="https://www.instagram.com/espacioastrox" target="blank" class="instagram">
        <img src="../img/instalogo.png" alt="instagram logo">
      </a>
      <a href="https://www.facebook.com" target="blank" class="facebook">
