--- a/paginas/sobremi.html
+++ b/paginas/sobremi.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Conocé la historia que hay detrás de Astro X y respondé a la pregunta ¿Por qué Astrología?">
-    <meta name="keywords" content=" MI CARTA NATAL, CONOOCIENDO ASTRO X, INFORMACION DE ASTRO X, CARTA DE ASTRO X, BIG 3 ASTRO X, ASTRO X ERIC DALLAS, HISTORIA DE ASTRO X, ASTROLOGIA ASTRO X "  >
+    <meta name="description" content="Descubre la astrología, conoce más sobre mí y mi trayectoria en el mundo de los astros. Aprende cómo la astrología puede ayudarte a descubrir tu proposito y camino de vida.>
+    <meta name="keywords" content="Astrología, Carta Natal, Lecturas Astrológicas, Consultas Astrológicas, Autoconocimiento, Espiritualidad, Signos Zodiacales, Horóscopo, Conciencia, Desarrollo Personal, Bienestar, Autoexploración, Autoconciencia."  >
     <!-- link de font-->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
     <!-- otro link de font-->
@@ -22,14 +22,14 @@
   <video src="../img/video-fondo.mp4" autoplay loop muted></video>
   <div class="boton-wpp">
     <a href="https://api.whatsapp.com/send?phone=542915660864" class="whatsapp" target="_blank">
-      <img src="../img/logoastrox.png" alt="logo astro x "> 
+      <img src="../img/wpp.png" alt="logo astro x "> 
     </a>
     <p class="hablemos"> ¡Hablemos!</p>
   </div> <!-- boton de wpp final-->
   <!-- boton arriba-->
   <div class="boton-arriba">
     <a href="#header-2" class="imagen-arriba">
-      <img src="../img/arrow.svg" alt="boton arriba"> 
+      <img src="../img/up.png" alt="boton arriba"> 
     </a>
   </div>
         <div class="contenedor-menu">
@@ -130,7 +130,7 @@
   <div class="footer-mobile">
     <p>¡Te invitamos a seguirnos en nuestras redes sociales!</p>
     <div class="imagenes-footer">
-      <a href="https://www.instagram.com/astro.equis" target="blank" class="instagram">
+      <a href="https://www.instagram.com/espacioastrox" target="blank" class="instagram">
         <img src="../img/instalogo.png" alt="instagram logo">
       </a>
       <a href="https://www.facebook.com" target="blank" class="facebook">
