--- a/paginas/talleres.html
+++ b/paginas/talleres.html
@@ -1,13 +1,13 @@
 <!-- aca quiero trabajar grid, para poner varios cuadritos, que tengan info de los talleres
 ¿como meto el video? no se-->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content=" En nuestros cursos y talleres, vas a aprender todo lo que necesites del mundo astrológico para seguir tu camino de autodescubrimiento">
-    <meta name="keywords" content=" TALLER DE ASTROLOGIA, TALLER DE LA LUNA NATAL EN ASTROLOGIA, TALLER DE VENUS NATAL ASTROLOGIA, TALLER MARTE NATAL ASTROLOGIA, TALLER DE ASCENDENTE ASTROLOGIA, CURSOS DE ASTROLOGIA, VENUS, ASCENDENTE, LUNA, MARTE, LUNA POR SIGNOS, LUNA POR ELEMENTO, LUNA POR CASAS, MARTE POR SIGNO, MARTE POR ELEMENTO, MARTE POR CASAS, VENUS POR SIGNO, VENUS POR ELEMENTO, VENUS POR CASAS, ASCENDENTE POR SIGNO, ASCENDENTE POR ELEMENTOS "  >
+    <meta name="description" content="Descubre la influencia de Venus, Luna y Marte en nuestros talleres. Clases en vivo y grabadas para profundizar en astrología.">
+    <meta name="keywords" content=" Lunas, Ascendentes, Venus, Marte, Carta Natal, Revolución Solar, Astrología Moderna, Astrología Tradicional, Interpretación, Signos del Zodiaco, Casas Astrológicas, Aspectos Planetarios, Predicciones, Autoconocimiento, Desarrollo Personal"  >
     <!-- link de font-->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
     <!-- otro link de font-->
@@ -24,14 +24,14 @@
     <video src="../img/video-fondo.mp4" autoplay loop muted></video>
     <div class="boton-wpp">
       <a href="https://api.whatsapp.com/send?phone=542915660864" class="whatsapp" target="_blank">
-        <img src="../img/logoastrox.png" alt="logo astro x "> 
+        <img src="../img/wpp.png" alt="logo astro x "> 
       </a>
       <p class="hablemos"> ¡Hablemos!</p>
     </div>
     <!-- boton arriba-->
   <div class="boton-arriba">
     <a href="#header-4" class="imagen-arriba">
-      <img src="../img/arrow.svg" alt="boton arriba"> 
+      <img src="../img/up.png" alt="boton arriba"> 
     </a>
   </div>
     <!-- Header..........-->
@@ -103,7 +103,7 @@
        <div class="footer-mobile">
         <p>¡Te invitamos a seguirnos en nuestras redes sociales!</p>
         <div class="imagenes-footer">
-          <a href="https://www.instagram.com/astro.equis" target="blank" class="instagram">
+          <a href="https://www.instagram.com/espacioastrox" target="blank" class="instagram">
             <img src="../img/instalogo.png" alt="instagram logo">
           </a>
           <a href="https://www.facebook.com" target="blank" class="facebook">
@@ -119,7 +119,7 @@
         <div class="footer-contenedor">
           <p>¡Te invitamos a seguirnos en nuestras redes sociales!</p>
           <div class="imagenes-footer">
-            <a href="https://www.instagram.com/astro.equis" target="blank" class="instagram">
+            <a href="https://www.instagram.com/espacioastrox" target="blank" class="instagram">
               <img src="../img/instalogo.png" alt="instagram logo">
             </a>
             <a href="https://www.facebook.com" target="blank" class="facebook">
